rename service IDs

--- a/lib/Resources/config/services.yml
+++ b/lib/Resources/config/services.yml
@@ -1,33 +1,33 @@
 services:
-    agit.localedata.adapter.abstract:
+    agit.cldr.adapter.abstract:
         abstract: true
         calls:
             - [setCldrDir, ["Resources/cldr"]]
 
-    agit.localedata.adapter.countrycurrency:
-        parent: agit.localedata.adapter.abstract
+    agit.cldr.adapter.countrycurrency:
+        parent: agit.cldr.adapter.abstract
         class: Agit\CldrBundle\Adapter\CountryCurrencyAdapter
 
-    agit.localedata.adapter.currency:
-        parent: agit.localedata.adapter.abstract
+    agit.cldr.adapter.currency:
+        parent: agit.cldr.adapter.abstract
         class: Agit\CldrBundle\Adapter\CurrencyAdapter
-        arguments: [ "@agit.localedata.adapter.countrycurrency" ]
+        arguments: [ "@agit.cldr.adapter.countrycurrency" ]
 
-    agit.localedata.adapter.country:
-        parent: agit.localedata.adapter.abstract
+    agit.cldr.adapter.country:
+        parent: agit.cldr.adapter.abstract
         class: Agit\CldrBundle\Adapter\CountryAdapter
-        arguments: [ "@agit.localedata.adapter.currency", "@agit.localedata.adapter.countrycurrency" ]
+        arguments: [ "@agit.cldr.adapter.currency", "@agit.cldr.adapter.countrycurrency" ]
 
-    agit.localedata.adapter.language:
-        parent: agit.localedata.adapter.abstract
+    agit.cldr.adapter.language:
+        parent: agit.cldr.adapter.abstract
         class: Agit\CldrBundle\Adapter\LanguageAdapter
-        arguments: [ "@agit.localedata.adapter.country" ]
+        arguments: [ "@agit.cldr.adapter.country" ]
 
-    agit.localedata.adapter.time:
-        parent: agit.localedata.adapter.abstract
+    agit.cldr.adapter.time:
+        parent: agit.cldr.adapter.abstract
         class: Agit\CldrBundle\Adapter\TimeAdapter
 
-    agit.localedata.adapter.timezone:
-        parent: agit.localedata.adapter.abstract
+    agit.cldr.adapter.timezone:
+        parent: agit.cldr.adapter.abstract
         class: Agit\CldrBundle\Adapter\TimezoneAdapter
-        arguments: [ "@agit.localedata.adapter.country" ]
+        arguments: [ "@agit.cldr.adapter.country" ]
