--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "name": "agitation/cldr-bundle",
     "type": "symfony-bundle",
-    "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.9",
         "symfony/symfony": "2.8.*",
-        "agitation/base-bundle": "dev-master"
+        "agitation/base-bundle": "~1.0",
+        "agitation/intl-bundle": "~1.0"
     },
     "autoload": {
         "psr-4": {
